# khufushome

./: .env.example  .gitignore  README.md  biome.json  package.json  pnpm-lock.yaml  turbo.json
config/: env.yaml
research/super-research/: README.md  UPDATE_GUIDE.md  app.py  main.py  plan.md  pyproject.toml  requirements.txt
research/super-research/config/: funds.yaml  personal.yaml
research/super-research/data/allocations/: asset_allocations.csv
research/super-research/data/benchmarks/: au_median_balance_by_age.csv  btc_aud_monthly.csv
research/super-research/data/fees/: fee_structures.csv
research/super-research/data/returns/: annual_returns.csv  annualised_returns.csv
research/super-research/research/: master_comparison.md
research/super-research/research/archive/: Aware_Super_HESTA_Comparison.md  Future_Super_Growth_Option_Research.md  UniSuper_and_ART_Growth_Option_Research.md  rest_vanguard_super_comparison.md  superannuation_fund_comparison.md
research/super-research/research/fund_papers/: art_high_growth_research_paper.md  australian_super_research_paper.md  aware_super_research_paper.md  future_super_research_paper.md  hesta_high_growth_research_paper.md  hostplus_balanced_research_paper.md  hostplus_shares_plus_research_paper.md  rest_super_research_paper.md  unisuper_research_paper.md  vanguard_super_research_paper.md
research/super-research/src/: analysis.py  charts.py  data_loader.py  models.py  report_generator.py
scripts/super-pipeline/: README.md  config.py  ingest_apra.py  pyproject.toml  requirements.txt  seed.py
(+93 files in other folders)
