[project]
name = "super-research"
version = "0.1.0"
description = "Personal superannuation fund comparison tool"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.6",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "streamlit>=1.55.0",
]
